--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-       ![Book logo](/PersonalProject/pic.jpg)"
+        <img ![Book logo](/PersonalProject/pic.jpg)" alt="Ayman Ismail's Picture">
         <h1>Ayman Ismail</h1>
         <p>Hi, I am Ayman Ismail, and I am a software engineer. I was born in Lebanon and came to Russia to study at RUDN.</p>
         <h2>Interests</h2>
